updated the link for linked-in

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       Email
     </a>
 
-    <a class="link-btn" href="www.linkedin.com/in/nabil-ouadjou-22110a324 target="_blank">
+    <a class="link-btn" href="https://www.linkedin.com/in/nabil-ouadjou-22110a324/"_blank">
       <i class="fa-brands fa-linkedin icon"></i>
       LinkedIn
     </a>
