--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Contact Me</h2>
+    <h2>Thank you for reviewing my resume. I look forward to the opportunity to connect </h2>
 
     <a class="link-btn" href="https://wa.me/+212613905079 " target="_blank">
       <i class="fa-brands fa-whatsapp icon"></i>
