--- a/index.html
+++ b/index.html
@@ -3,85 +3,154 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Links</title>
+  <title>Contact — Dark</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
+    :root{
+      --bg:#07070a;
+      --card: rgba(255,255,255,0.04);
+      --glass: rgba(255,255,255,0.06);
+      --accent: linear-gradient(90deg, rgba(99,102,241,0.12), rgba(16,185,129,0.08));
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%;}
     body {
       margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: #0b0b0b;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      padding: 20px 12px;
+      font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      background: radial-gradient(1200px 600px at 10% 10%, rgba(99,102,241,0.05), transparent),
+                  radial-gradient(900px 400px at 90% 90%, rgba(16,185,129,0.03), transparent),
+                  var(--bg);
+      color: #e6e6e9;
+      -webkit-font-smoothing:antialiased;
+      display:flex;
+      align-items:center;
+      justify-content:center;
     }
 
-    .container {
-      width: 90%;
-      max-width: 400px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
+    .phone {
+      width: 390px;
+      max-width: 100%;
+      height: 780px;
+      border-radius: 28px;
+      padding: 28px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      box-shadow: 0 10px 30px rgba(2,6,23,0.6), inset 0 1px 0 rgba(255,255,255,0.02);
+      border: 1px solid rgba(255,255,255,0.03);
+      backdrop-filter: blur(8px);
+      display:flex;
+      flex-direction:column;
+      gap:18px;
     }
 
-    .link-btn {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      padding: 15px 20px;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 14px;
-      text-decoration: none;
-      color: white;
-      font-size: 1.2rem;
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      transform: translateY(0px);
-      transition: all 0.3s ease;
+    .top {
+      display:flex;align-items:center;justify-content:space-between;
     }
+    .avatar {
+      width:64px;height:64px;border-radius:12px;background:linear-gradient(140deg,#111,#222);
+      display:flex;align-items:center;justify-content:center;font-weight:700;color:#9ca3af;font-size:20px;
+      border:1px solid rgba(255,255,255,0.03);
+    }
+    h1{font-size:18px;margin:0}
+    p.lead{margin:6px 0 0;color:#bfc4cc;font-size:13px;line-height:1.4;opacity:0;transform:translateY(12px) blur(4px);transition:all .7s cubic-bezier(.2,.9,.2,1);}
 
-    .link-btn:hover {
-      transform: translateY(-4px);
-      background: rgba(255, 255, 255, 0.1);
-    }
+    .links {margin-top:6px;display:flex;flex-direction:column;gap:12px;flex:1;align-items:stretch}
 
-    .icon {
-      font-size: 1.5rem;
+    .btn {
+      display:flex;align-items:center;gap:14px;padding:14px 18px;border-radius:14px;text-decoration:none;color:inherit;
+      background:var(--card);border:1px solid rgba(255,255,255,0.03);
+      backdrop-filter: blur(8px);
+      transform: translateX(0);opacity:1;
+      transition: transform 420ms cubic-bezier(.2,.9,.2,1), box-shadow 220ms ease, opacity 300ms ease;
+      overflow:hidden;position:relative;
     }
+    .btn .icon{width:36px;height:36px;display:flex;align-items:center;justify-content:center;border-radius:10px;font-size:16px;background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.02)}
+    .btn .label{flex:1;text-align:left;font-weight:600}
 
-    h2 {
-      text-align: center;
-      margin-bottom: 10px;
-      font-weight: 400;
-      color: #cfcfcf;
+    /* slide-in staggered */
+    .btn {transform: translateY(18px);opacity:0}
+    .btn.show{transform: translateY(0);opacity:1}
+    .btn:nth-child(1){transition-delay:80ms}
+    .btn:nth-child(2){transition-delay:160ms}
+    .btn:nth-child(3){transition-delay:240ms}
+    .btn:nth-child(4){transition-delay:320ms}
+
+    /* hover effects */
+    .btn:hover{box-shadow:0 8px 30px rgba(2,6,23,0.6);transform: translateY(-6px) translateX(0)}
+    .btn::after{
+      content:"";position:absolute;inset:0;border-radius:14px;
+      background: linear-gradient(90deg, rgba(255,255,255,0.02), transparent 30%);
+      pointer-events:none;mix-blend-mode:screen;opacity:0;transition:opacity 240ms ease;
     }
-  </style>
+    .btn:hover::after{opacity:1}
+
+    .footer{font-size:12px;color:#98a0aa;text-align:center;margin-top:8px}
+
+    @media (max-width:420px){
+      .phone{height:auto;padding:22px;border-radius:18px}
+    }
+    .title-anim{opacity:0;transform:translateY(12px) blur(4px);transition:all .7s cubic-bezier(.2,.9,.2,1);} 
+</style>
 </head>
 <body>
-  <div class="container">
-    <h2>Thank you for reviewing my resume. I look forward to the opportunity to connect </h2>
+  <div class="phone" role="main">
+    <div class="top">
+      <div>
+        <h1 class="title-anim">Contact</h1>
+        <p class="lead">Thank you for reviewing my resume. I look forward to the opportunity to connect.</p>
+      </div>
+      <div class="avatar">NO</div>
+    </div>
 
-    <a class="link-btn" href="https://wa.me/+212613905079 " target="_blank">
-      <i class="fa-brands fa-whatsapp icon"></i>
-      WhatsApp
-    </a>
+    <nav class="links" aria-label="contact links">
+      <a class="btn" id="wa" href="https://wa.me/+212613905079" target="_blank" rel="noopener noreferrer">
+        <span class="icon"><i class="fa-brands fa-whatsapp"></i></span>
+        <span class="label">WhatsApp</span>
+        <span class="meta">Message me</span>
+      </a>
 
-    <a class="link-btn" href="mailto:nabilouadjou920@gmail.com " target="_blank">
-      <i class="fa-solid fa-envelope icon"></i>
-      Email
-    </a>
+      <a class="btn" id="email" href="mailto:nabilouadjou920@gmail.com" target="_blank" rel="noopener noreferrer">
+        <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+        <span class="label">Email</span>
+        <span class="meta">Send a message</span>
+      </a>
 
-    <a class="link-btn" href="https://www.linkedin.com/in/nabil-ouadjou-22110a324/"_blank">
-      <i class="fa-brands fa-linkedin icon"></i>
-      LinkedIn
-    </a>
+      <a class="btn" id="linkedin" href="https://www.linkedin.com/in/nabil-ouadjou-22110a324/" target="_blank" rel="noopener noreferrer">
+        <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
+        <span class="label">LinkedIn</span>
+        <span class="meta">Connect</span>
+      </a>
 
-    <a class="link-btn" href="https://github.com/nabil920-dev" target="_blank">
-      <i class="fa-brands fa-github icon"></i>
-      GitHub
-    </a>
+      <a class="btn" id="github" href="https://github.com/nabil920-dev" target="_blank" rel="noopener noreferrer">
+        <span class="icon"><i class="fa-brands fa-github"></i></span>
+        <span class="label">GitHub</span>
+        <span class="meta">View repos</span>
+      </a>
+    </nav>
+
+    <div class="footer">Links open in a new tab. Replace placeholders with your real links.</div>
   </div>
+
+  <script>
+    // add show class to trigger slide-in with slight stagger
+    window.addEventListener('DOMContentLoaded', ()=>{
+      const btns = document.querySelectorAll('.btn');
+      btns.forEach((b,i)=> setTimeout(()=> b.classList.add('show'), 80 + i*80));
+      // text blur slide animation
+      const title = document.querySelector('.title-anim');
+      const lead = document.querySelector('.lead');
+      setTimeout(()=>{
+        title.style.opacity = 1;
+        title.style.transform = 'translateY(0) blur(0)';
+        lead.style.opacity = 1;
+        lead.style.transform = 'translateY(0) blur(0)';
+      },150);((b,i)=> setTimeout(()=> b.classList.add('show'), 80 + i*80));
+    });
+  </script>
 </body>
 </html>
+
+
+
+
+
